# california

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  train.py
.devcontainer/: README-devcontainer.md  devcontainer.json  login.sh
agents/: uv-skill.json
